api/static/style.css
:root {
    font-size: 62.5%;
}

body {
    width: 95vw;
    margin: 0 auto;
    font: 1.5rem sans-serif;
    background-color: #333;
    color: #eee;
}

h1 {
    border-bottom: 0.3rem #eee solid;
}

.class-list {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    margin-bottom: 5rem;
}

.class-list > div {
    display: block;
    text-decoration: none;
    color: inherit;
    border: 0.3rem grey solid;
    border-radius: 10rem;
    padding: 0 2rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    transition: scale 0.1s ease-out;
    cursor: pointer;

    span {
        color: grey;
    }

    &:hover {
        scale: 1.1;
        box-shadow: 0 0 0.5rem 0.5rem rgba(0, 0, 0, 0.5);
    }
}

@media (min-width: 1000px) {
    body {
        width: 50vw;
        margin: 0 auto;
    }
}

